--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
+appdirs==1.4.3
+asgiref==3.2.7
 certifi==2019.11.28
 cffi==1.14.0
 cryptography==2.9
 decorator==4.4.2
+distlib==0.3.0
+Django==3.0.6
+django-polls==0.1
+filelock==3.0.12
 future==0.18.2
+psycopg2==2.8.5
 pycparser==2.20
-python-telegram-bot==12.5.1
+python-telegram-bot==12.6.1
+pytz==2020.1
 six==1.14.0
+sqlparse==0.3.1
 tornado==6.0.4
+virtualenv==20.0.15
